Adicionando meta tags de redes sociais

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    
+    <meta name="description" content="Informações sobre a sua cidade">
+    <meta name="image" content="<%= BASE_URL %>img/logo.png">
+    <meta itemprop="name" content="Governo Aberto">
+    <meta itemprop="description" content="Informações sobre a sua cidade">
+    <meta itemprop="image" content="<%= BASE_URL %>img/logo.png">
+    <meta name="og:title" content="Governo Aberto">
+    <meta name="og:description" content="Informações sobre a sua cidade">
+    <meta name="og:type" content="website">
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Governo Aberto</title>
   </head>
