--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     
+    <meta name="keywords" content="dados, governo, brasil, dados abertos, governo aberto, tranparencia">
     <meta name="description" content="Informações sobre a sua cidade">
     <meta name="image" content="<%= BASE_URL %>img/logo.png">
     <meta itemprop="name" content="Governo Aberto">
