Adicionando título quando js estiver desabilitado

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
   </head>
   <body style="overflow-y: scroll;">
     <noscript>
+      <h1 style="text-align:center">Bem-vindo(a) ao Governo Aberto</h1>
+      <h3 style="text-align:center">Informações sobre a sua cidade</h3>
       <strong>We're sorry but Governo Aberto doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
